# Challenge-4-Virtual-Promptwar

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/workflows/: ci.yml  deploy.yml
apps/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/backend/alembic/: env.py
apps/backend/app/: config.py  database.py  dependencies.py  logging_config.py  main.py  redis.py
apps/backend/app/api/: health.py
apps/backend/app/middleware/: cors.py  logging.py  rate_limiter.py
apps/backend/tests/: conftest.py  test_health.py  test_security.py
apps/frontend/: .env.local.example  Dockerfile  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/frontend/e2e/: dashboard.spec.ts
apps/frontend/src/: env.ts
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/app/(auth)/: layout.tsx
apps/frontend/src/app/(auth)/login/: page.tsx
apps/frontend/src/app/(dashboard)/: error.test.tsx  error.tsx  layout.tsx  page.tsx
apps/frontend/src/components/: crowd-chart.tsx
apps/frontend/src/providers/: index.tsx  query-provider.tsx
apps/frontend/src/stores/: app-store.ts
docker/nginx/: nginx.conf
docs/: api.md  architecture.md  development.md
scripts/: seed.py  setup.ps1  setup.sh
